--- a/Views/Produktet/Index.cshtml
+++ b/Views/Produktet/Index.cshtml
@@ -33,7 +33,7 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.Numri }) |
                 @Html.ActionLink("Details", "Details", new { id=item.Numri }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Delete", "Delete", new {  id=item.Numri })
             </td>
         </tr>
 }
