--- a/Views/Kategoritecontroller/Create.cshtml
+++ b/Views/Kategoritecontroller/Create.cshtml
@@ -1,29 +1,24 @@
-﻿@model Main.Models.Produktet
+﻿@model Main.Models.Kategorite
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
-<h4>Produktet</h4>
+<h4>Kategorite</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                
-                <input asp-for="Numri" type="hidden" class="form-control" />
-                <span asp-validation-for="Emri" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Emri" class="control-label"></label>
                 <input asp-for="Emri" class="form-control" />
                 <span asp-validation-for="Emri" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
