--- a/Views/Kategoritecontroller/Edit.cshtml
+++ b/Views/Kategoritecontroller/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Main.Models.Produktet
+﻿@model Main.Models.Kategorite
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,17 +6,13 @@
 
 <h1>Edit</h1>
 
-<h4>Produktet</h4>
+<h4>Kategorite</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                
-                <input asp-for="Numri" type="hidden" class="form-control" />
-                <span asp-validation-for="Emri" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="Numri" />
             <div class="form-group">
                 <label asp-for="Emri" class="control-label"></label>
                 <input asp-for="Emri" class="form-control" />
